--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -78,6 +78,13 @@ if(CHIAKI_GUI_ENABLE_SDL_GAMECONTROLLER)
 	target_link_libraries(chiaki SDL2::SDL2)
 	target_compile_definitions(chiaki PRIVATE CHIAKI_GUI_ENABLE_SDL_GAMECONTROLLER)
 endif()
+
+target_link_libraries(chiaki opencv_core)
+target_link_libraries(chiaki opencv_highgui)
+target_link_libraries(chiaki zmq)
+target_link_libraries(chiaki FFMPEG::swscale)
+
+
 if(CHIAKI_ENABLE_SETSU)
 	target_link_libraries(chiaki setsu)
 	target_compile_definitions(chiaki PRIVATE CHIAKI_GUI_ENABLE_SETSU)
@@ -85,6 +92,15 @@ endif()
 if(NOT CHIAKI_ENABLE_FFMPEG_DECODER)
 	message(FATAL_ERROR "Chiaki GUI requires CHIAKI_ENABLE_FFMPEG_DECODER=ON")
 endif()
+
+#
+# Necessary libraries such as OpenCV and ZMQ
+#
+target_link_libraries(chiaki opencv_core)
+target_link_libraries(chiaki opencv_highgui)
+target_link_libraries(chiaki zmq)
+target_link_libraries(chiaki FFMPEG::swscale)
+#
 
 set_target_properties(chiaki PROPERTIES
 		MACOSX_BUNDLE TRUE
